Fixes layout issues for Time Series Also fixed title.

--- a/src/firefly/js/ui/Banner.css
+++ b/src/firefly/js/ui/Banner.css
@@ -15,8 +15,7 @@
     flex-grow: 1;
     padding-top: 2px;
     display: flex;
-    flex-direction: column;
-    align-items: baseline;
+    align-items: center;
 }
 
 .banner__right {
